// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it renders loading 1`] = `
<div>
  Loading
</div>
`;

exports[`it renders with an error 1`] = `
<div>
  Error loading repos
</div>
`;

exports[`it renders with data 1`] = `
<repository-list__StyledRepositoryList>
  <repository-list__StyledLink
    key=":repoName1"
    onClick={[Function]}
    to="/repositories/:login1/:repoName1/issues"
  >
    :repoName1
  </repository-list__StyledLink>
  <repository-list__StyledLink
    key=":repoName2"
    onClick={[Function]}
    to="/repositories/:login2/:repoName2/issues"
  >
    :repoName2
  </repository-list__StyledLink>
</repository-list__StyledRepositoryList>
`;
